# highlightcommander

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  hc_wlx.cpp  hc_wlx.h  listplug.cpp  listplug.def  listplug.h  listplug.rc  resource.h
sdk/: common.h  listplug.h
src/: hc_wlx.h  plugin.cpp
testclient/: main.cpp
testlib/: main.cpp
